crates/ty_python_semantic/resources/mdtest/snapshots/overloads.md_-_Overloads_-_Invalid_-_At_least_two_overloa…_(84dadf8abd8f2f2).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: overloads.md - Overloads - Invalid - At least two overloads
mdtest path: crates/ty_python_semantic/resources/mdtest/overloads.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import overload
2 | 
3 | @overload
4 | def func(x: int) -> int: ...
5 | 
6 | # error: [invalid-overload]
7 | def func(x: int | str) -> int | str:
8 |     return x
```

## mdtest_snippet.pyi

```
1 | from typing import overload
2 | 
3 | @overload
4 | # error: [invalid-overload]
5 | def func(x: int) -> int: ...
```

# Diagnostics

```
error[invalid-overload]: Overloaded function `func` requires at least two overloads
 --> src/mdtest_snippet.py:4:5
  |
3 | @overload
4 | def func(x: int) -> int: ...
  |     ---- Only one overload defined here
5 |
6 | # error: [invalid-overload]
7 | def func(x: int | str) -> int | str:
  |     ^^^^
8 |     return x
  |
info: rule `invalid-overload` is enabled by default

```

```
error[invalid-overload]: Overloaded function `func` requires at least two overloads
 --> src/mdtest_snippet.pyi:5:5
  |
3 | @overload
4 | # error: [invalid-overload]
5 | def func(x: int) -> int: ...
  |     ----
  |     |
  |     Only one overload defined here
  |
info: rule `invalid-overload` is enabled by default

```
